<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_navi_home"/>

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_navi_search"/>
    <item
        android:id="@+id/action_alert"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_navi_alert"/>
    <item
        android:id="@+id/action_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_navi_mypage"/>
</menu>