<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressSetting.MyAddressSettingActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_clear_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_address_setting"
            android:fontFamily="@font/bmhanna"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/textAddress"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginTop="1dp"
            android:ellipsize="start"
            android:enabled="false"
            android:hint="@string/address_hint"
            android:fontFamily="@font/bmhanna"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnFindTextAddress"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textAddress"
            android:layout_marginTop="10dp"
            android:text="@string/find_address_text"
            android:textSize="20sp"
            android:fontFamily="@font/bmhanna"
            android:background="@drawable/find_address_text" />
        <Button
            android:id="@+id/btnSearchAddress"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnFindTextAddress"
            android:layout_marginTop="10dp"
            android:text="@string/find_address_map"
            android:textSize="20sp"
            android:fontFamily="@font/bmhanna"
            android:background="@drawable/find_address_map" />

        <Button
            android:id="@+id/btnAddressDecide"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="@string/address_decide"
            android:textSize="30sp"
            android:fontFamily="@font/bmhanna"
            android:background="@drawable/address_decide" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>